🎉 Multi-API Data Pipeline Complete!
✅ Major Features Added:
- Google Search Console API integration
- Google Ads API integration (framework ready)
- Unified data service combining all APIs
- Extended database models for all data sources
- Comprehensive API testing suite

🚀 Working Services:
- ✅ Google Analytics: 24 records collected
- ✅ Google Search Console: 4 records collected
- ⚠️  Google Ads: Framework ready, needs configuration

🔧 Technical Improvements:
- Fixed Search Console URL (www.praxis-buchmann.info)
- Service account permissions configured
- Error handling for missing APIs
- Unified data fetching and persistence
- Complete test coverage

📊 Database Status:
- Analytics data: 24 records
- Search Console data: 4 records
- SQLite database stable and performing well

🎯 Ready for Phase 3: Frontend Dashboard Development

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,14 @@ ENVIRONMENT=development
 GOOGLE_ANALYTICS_PROPERTY_ID=your_property_id
 GOOGLE_APPLICATION_CREDENTIALS=path/to/credentials.json
 
-# Database Configuration (SQLite for development, later Azure SQL)
+# Google Search Console Configuration
+GOOGLE_SEARCH_CONSOLE_SITE_URL=https://your-website.com/
+
+# Google Ads Configuration
+GOOGLE_ADS_CUSTOMER_ID=your_customer_id
+GOOGLE_ADS_CONFIG_PATH=path/to/google_ads_config.yaml
+
+# Database Configuration (SQLite for development and production)
 DATABASE_URL=sqlite:///./analytics.db
 
 # API Configuration
