--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ google-analytics-data==0.17.0
 google-api-python-client==2.108.0
 google-auth==2.25.2
 google-auth-oauthlib==1.1.0
+google-ads==23.1.0
 
 # Azure SDK (for later)
 azure-identity==1.15.0
